# ChangeLog for net-mail/notmuch
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jan 2013; Amadeusz Żołnowski <aidecoe@gentoo.org>
  +files/60notmuch-pick-gentoo.el, notmuch-9999.ebuild, metadata.xml:
  Synced with net-mail/notmuch-0.15::gentoo.

  18 Jan 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Require libxml2 flag for app-editors/emacs.

  18 Jan 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Synced with net-mail/notmuch-0.14-r1::gentoo.

  19 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Synced with net-mail/notmuch-0.13::gentoo, again.

  16 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild,
  metadata.xml:
  Synced with net-mail/notmuch-0.13::gentoo.

  10 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Enforce build with GMime 2.6.

  10 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Synced with net-mail/notmuch-0.12::gentoo.

  20 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Renamed Python bindings README to README-python, because it used to overwrite
  main Notmuch README file.

  20 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Depend on GMime 2.6.7 or later.

  20 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  GMime 2.6 must be at least 2.6.7. Latest HEAD is compatible with Python 3.2.

  02 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Synced with net-mail/notmuch-0.11.1-r2:gentoo and allowed dev-libs/gmime:2.6
  dependency.

  21 Feb 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild,
  metadata.xml:
  Added 'nmbug' USE flag.

  24 Jan 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Dropped autotools-utils. Using EAPI4 defaults. Builds with current HEAD, now.
